lj-gender
from genderInput.isBlank() to genderInput.trim().isEmpty()